--- a/public/app/views/pages/workspace.html
+++ b/public/app/views/pages/workspace.html
@@ -56,6 +56,9 @@ window.addEventListener("drop",function(e){
             <md-button>
               Settings
             </md-button>
+            <md-button ng-click="openHelpDialog()">
+              Help
+            </md-button>
           </md-menu-item>
         </md-menu-content>
       </md-menu>
