--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -78,7 +78,7 @@
       <md-subheader style="color: white; background-color: #4CAF50;"><b>Detection Status</b></md-subheader>
       <md-list>
         <md-list-item>
-          <p ng-if="detectionStatus() == 0"> Detection not run </p>
+          <p ng-if="detectionStatus() == 0"> Detection not run on this </p>
           <p ng-if="detectionStatus() == 1"> Detection awaiting review </p>
           <p ng-if="detectionStatus() == 2"> Detection review complete </p>
           <p ng-if="detectionStatus() == -1"> There was an error when running detection </p>
