removed &test from calls, removed run ident button

--- a/public/app/views/includes/entry/entry.left.html
+++ b/public/app/views/includes/entry/entry.left.html
@@ -29,7 +29,7 @@
         <li> Upload your Wildlife photos </li>
         <li> Run the IBEIS Detection </li>
         <li> Review the Detection results </li>
-        <li> Run the IBEIS Identification </li>
+        <li> IBEIS will automatically run Identification on your results </li>
         <li> Review the Identification results </li>
       </ol>
       After these simple steps you will have access to all new information about the animals you've photographed. </p>
