--- a/public/app/views/includes/workspace/workspace.left.html
+++ b/public/app/views/includes/workspace/workspace.left.html
@@ -89,9 +89,9 @@ $(function(){
     <md-button class="md-primary md-raised sidenav-btn" ng-disabled="workspace == 'Loading...'">
       <strong>Review</strong> Annotations
     </md-button>
-    <md-button class="md-primary md-raised sidenav-btn" ng-disabled="workspace == 'Loading...'" ng-click="identification.startIdentification()">
+    <!-- <md-button class="md-primary md-raised sidenav-btn" ng-disabled="workspace == 'Loading...'" ng-click="identification.startIdentification()">
       <strong>Run</strong> Identification
-    </md-button>
+    </md-button> -->
     <md-button class="md-primary md-raised sidenav-btn" ng-disabled="workspace == 'Loading...'" ng-click="identification.showIdentificationReview()">
       <strong>Review</strong> Identification ({{ reviewCounts.identification }})
     </md-button>
